# GowEngine

./: .gitmodules  README.md
assets/: .gitignore
include/GowEngine/: .gitignore  AppleEngineControllerMacro.hpp  AppleMacros.hpp  BuildConstants.hpp  BuildMacros.hpp  GowEngine.hpp
libs/android/: README.md
libs/iOS/: README.md
libs/linux/: README.md
libs/macOS/: README.md
libs/windows/: README.md
src/: AckRange.cpp  AckRange.hpp  Animation.cpp  Animation.hpp  AssetHandler.hpp  AssetHandlerFactory.cpp  AssetHandlerFactory.hpp  AssetManager.cpp  AssetManager.hpp  Assets.cpp  Assets.hpp  AssetsLoader.cpp  AssetsManager.cpp  AssetsManager.hpp  AudioEngine.cpp  AudioEngine.hpp  AudioEngineFactory.hpp  AudioEngineHelper.hpp  AudioEngineHelperFactory.cpp  AudioEngineHelperFactory.hpp  Box2DDebugRenderer.cpp  Box2DDebugRenderer.hpp  CircleBatcher.cpp  CircleBatcher.hpp  ClientHelper.cpp  ClientHelper.hpp  ClientProxy.cpp  ClientProxy.hpp  ClipboardUtil.hpp  Color.cpp  Color.hpp  Config.cpp  Config.hpp  Constants.hpp  CursorConverter.cpp  CursorConverter.hpp  CursorEvent.hpp  DefaultEngineState.cpp  DefaultEngineState.hpp  DeliveryNotificationManager.cpp  (+189 more)
src/android/: AndroidAssetHandler.cpp  AndroidAssetHandler.hpp  AndroidAudioEngine.cpp  AndroidAudioEngine.hpp  AndroidAudioEngineHelper.cpp  AndroidAudioEngineHelper.hpp  AndroidSound.cpp  AndroidSound.hpp  AndroidSoundWrapper.cpp  AndroidSoundWrapper.hpp  InputStream.cpp  InputStream.hpp  JNIAndroidAssetHandler.cpp  JNIAndroidAssetHandler.hpp  SampleBuffer.cpp  SampleBuffer.hpp  SampleSource.cpp  SampleSource.hpp  SimpleMultiPlayer.cpp  SimpleMultiPlayer.hpp  WavChunkHeader.cpp  WavChunkHeader.hpp  WavFmtChunkHeader.cpp  WavFmtChunkHeader.hpp  WavRIFFChunkHeader.cpp  WavRIFFChunkHeader.hpp  WavStreamReader.cpp  WavTypes.hpp
src/apple/: AppleAssetHandler.cpp  AppleAssetHandler.hpp  AppleAudioEngine.cpp  AppleAudioEngine.hpp  AppleAudioEngineHelper.cpp  AppleAudioEngineHelper.hpp  AppleSound.cpp  AppleSound.hpp  AppleSoundWrapper.cpp  AppleSoundWrapper.hpp  NSAppleAssetHandler.hpp  NSAppleAssetHandler.mm  NSBundleHelper.hpp  NSBundleHelper.mm  ObjectALHelper.hpp  ObjectALHelper.mm  ObjectALWrapper.hpp  ObjectALWrapper.mm
src/box2d/: Box2DDebugRenderer.cpp  Box2DDebugRenderer.hpp  Box2DEntityPhysicsController.cpp  Box2DEntityPhysicsController.hpp  Box2DPhysicsController.cpp  EntityBox2DPhysicsController.cpp  EntityBox2DPhysicsController.hpp
src/core/: GowEngine_core.hpp
src/glfw/: GlfwMain.cpp
src/linux/: LinuxAssetHandler.cpp  LinuxAssetHandler.hpp  LinuxAudioEngine.cpp  LinuxAudioEngine.hpp  LinuxAudioEngineHelper.cpp  LinuxAudioEngineHelper.hpp  LinuxSound.cpp  LinuxSound.hpp  LinuxSoundWrapper.cpp  LinuxSoundWrapper.hpp
src/platform/android/app/src/main/cpp/: CMakeLists.txt
src/rapidjson/: AssetsLoader.cpp  AssetsLoader.hpp  ConfigLoader.cpp  ConfigLoader.hpp  EntityLayoutLoader.cpp  EntityLayoutLoader.hpp  (+4 more)
(+425 files in other folders)
